# demo_loyalty_api

./: Dockerfile  Readme.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
users/: managers.py  models.py  serializares.py  services.py  tasks.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_smscode_user.py  0003_alter_invitation_user.py
